5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1593_1806.log
== TEST (2019-04-03 16:34:17) 
-- CODE:
import math from*
n= int(input("numero de pessoas"))
pn= 1-(factorial(365) / factorial (365 - n))*(1/365**n)
print(round(pn*100 ,2))
-- ERROR:
File "XXXX", line 1
    import math from*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 16:35:06) 
-- CODE:
from math import *
n= int(input("numero de pessoas"))
pn= 1-(factorial(365) / factorial (365 - n))*(1/365**n)
print(round(pn*100 ,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 16:35:18) 
-- CODE:
from math import *
n= int(input("numero de pessoas"))
pn= 1-(factorial(365) / factorial (365 - n))*(1/365**n)
print(round(pn*100 ,2))
-- EXECUTION TIME:
0.139197
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
